@@ -69,6 +69,11 @@ if(isset($_REQUEST['action-visual'])) {
 	if($_REQUEST['action-visual'] == "delete") { $ip['action'] = "delete"; }	
 }
 
+//detect proper hostname
+if(strlen($_POST['dns_name']>0) && !validateHostname($_REQUEST['dns_name'])) {
+	die('<div class="alert alert-error">Invalid hostname!</div>');
+}
+
 
 //no strict checks - for range networks and /31, /32
 if(isset($_POST['nostrict'])) {
